--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
               height="260"
             />
             <h3>Daniel Wilson</h3>
-            <p>UI Designer Yulia</p>
+            <p>UI Designer Yulia P</p>
           </li>
         </ul>
       </section>
