--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
               width="264"
               height="260"
             />
-            <h3>Daniel Wilsonnnn</h3>
+            <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
         </ul>
